--- a/index.html
+++ b/index.html
@@ -4,76 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Upload Your Wedding Memories</title>
-  <style>
-    body {
-      font-family: 'Georgia', serif;
-      background: url('https://www.wedding-photos.com/wedding-background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-    }
-    .upload-box {
-      border: 2px solid #fff;
-      border-radius: 10px;
-      padding: 2rem;
-      background-color: rgba(255, 255, 255, 0.8);
-      width: 100%;
-      max-width: 400px;
-      text-align: center;
-    }
-    input[type="file"] {
-      margin: 1rem 0;
-      padding: 0.5rem;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background-color: #FF69B4;
-      color: white;
-      padding: 0.8rem 2rem;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      font-size: 1.1rem;
-    }
-    button:hover {
-      background-color: #FF1493;
-    }
-    #statusText {
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>💍 Share Your Wedding Memories 💕</h1>
   <div class="upload-box">
     <p>Please upload your photos or videos! Thank you for being part of our special day! 😍</p>
     <input type="file" id="fileInput" accept="image/*,video/*">
-    <button onclick="uploadToCloudinary()">Upload</button>
+    <button id="uploadButton">Upload</button>
     <p id="statusText"></p>
   </div>
 
   <script>
     const cloudName = "djt6ardqq"; // Your Cloudinary cloud name
-    const uploadPreset = "unsigned_upload"; // Replace with your preset name if different
+    const uploadPreset = "unsigned_upload"; // Make sure this matches your Cloudinary preset
 
-    async function uploadToCloudinary() {
-      const fileInput = document.getElementById("fileInput");
+    document.getElementById('uploadButton').addEventListener('click', async () => {
+      const file = document.getElementById("fileInput").files[0];
       const statusText = document.getElementById("statusText");
-      const file = fileInput.files[0];
 
       if (!file) {
         statusText.textContent = "Please select a file!";
         return;
       }
 
-      const url = `https://api.cloudinary.com/v1_1/${cloudName}/auto/upload`;
       const formData = new FormData();
       formData.append("file", file);
       formData.append("upload_preset", uploadPreset);
@@ -81,18 +35,18 @@
       statusText.textContent = "Uploading...";
 
       try {
-        const response = await fetch(url, {
+        const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/auto/upload`, {
           method: "POST",
           body: formData
         });
         const data = await response.json();
         statusText.textContent = "✅ Upload complete! Thank you! 🎉";
-        console.log("Uploaded to:", data.secure_url);
-      } catch (error) {
+        console.log("File uploaded to:", data.secure_url);
+      } catch (err) {
+        console.error(err);
         statusText.textContent = "❌ Upload failed. Please try again.";
-        console.error(error);
       }
-    }
+    });
   </script>
 </body>
 </html>
