--- a/index.html
+++ b/index.html
@@ -10,42 +10,50 @@
   <h1>💍 Share Your Wedding Memories 💕</h1>
   <div class="upload-box">
     <p>Please upload your photos or videos! Thank you for being part of our special day! 😍</p>
-    <input type="file" id="fileInput" accept="image/*,video/*">
+    <input type="file" id="fileInput" accept="image/*,video/*" multiple>
     <button id="uploadButton">Upload</button>
     <p id="statusText"></p>
   </div>
 
   <script>
     const cloudName = "djt6ardqq"; // Your Cloudinary cloud name
-    const uploadPreset = "unsigned_upload"; // Make sure this matches your Cloudinary preset
+    const uploadPreset = "unsigned_upload"; // Your Cloudinary unsigned preset
 
     document.getElementById('uploadButton').addEventListener('click', async () => {
-      const file = document.getElementById("fileInput").files[0];
+      const files = document.getElementById("fileInput").files;
       const statusText = document.getElementById("statusText");
 
-      if (!file) {
-        statusText.textContent = "Please select a file!";
+      if (!files.length) {
+        statusText.textContent = "Please select at least one file!";
         return;
       }
 
-      const formData = new FormData();
-      formData.append("file", file);
-      formData.append("upload_preset", uploadPreset);
-
       statusText.textContent = "Uploading...";
 
-      try {
-        const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/auto/upload`, {
-          method: "POST",
-          body: formData
-        });
-        const data = await response.json();
-        statusText.textContent = "✅ Upload complete! Thank you! 🎉";
-        console.log("File uploaded to:", data.secure_url);
-      } catch (err) {
-        console.error(err);
-        statusText.textContent = "❌ Upload failed. Please try again.";
+      const uploadResults = [];
+
+      for (let file of files) {
+        const formData = new FormData();
+        formData.append("file", file);
+        formData.append("upload_preset", uploadPreset);
+
+        try {
+          const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/auto/upload`, {
+            method: "POST",
+            body: formData
+          });
+
+          const data = await response.json();
+          uploadResults.push(data.secure_url);
+        } catch (err) {
+          console.error("Upload failed for one file:", err);
+          statusText.textContent = "❌ One or more uploads failed. Please try again.";
+          return;
+        }
       }
+
+      statusText.textContent = `✅ Upload complete! ${uploadResults.length} file(s) uploaded 🎉`;
+      console.log("Uploaded file URLs:", uploadResults);
     });
   </script>
 </body>
