--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <div id="gallery" class="gallery"></div>
 
   <script>
-    const cloudName = "djt6ardqq"; // Your Cloudinary cloud name
-    const uploadPreset = "unsigned_upload"; // Your Cloudinary unsigned preset
+    const cloudName = "djt6ardqq";
+    const uploadPreset = "unsigned_upload";
 
     document.getElementById('uploadButton').addEventListener('click', async () => {
       const files = document.getElementById("fileInput").files;
@@ -59,6 +59,7 @@
         const formData = new FormData();
         formData.append("file", file);
         formData.append("upload_preset", uploadPreset);
+        formData.append("folder", "wedding-uploads");
 
         try {
           const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/auto/upload`, {
@@ -76,6 +77,8 @@
       }
 
       statusText.textContent = `✅ Upload complete! ${uploadResults.length} file(s) uploaded 🎉`;
+      loadGallery(); // Reload gallery to show new uploads
+
 
       // Add uploaded images to gallery
       uploadResults.forEach(url => {
@@ -85,6 +88,33 @@
         gallery.appendChild(img);
       });
     });
+
+    // Load existing gallery images from Cloudinary
+    async function loadGallery() {
+      const gallery = document.getElementById("gallery");
+      gallery.innerHTML = "Loading gallery...";
+
+      try {
+        const response = await fetch("https://res.cloudinary.com/djt6ardqq/image/list/wedding-uploads.json");
+        const data = await response.json();
+
+        gallery.innerHTML = ""; // Clear loading text
+
+        data.resources.forEach(resource => {
+          const img = document.createElement("img");
+          img.src = `https://res.cloudinary.com/djt6ardqq/image/upload/w_300/${resource.public_id}.${resource.format}`;
+          img.alt = "Guest memory";
+          gallery.appendChild(img);
+        });
+
+      } catch (err) {
+        console.error("Gallery load error:", err);
+        gallery.innerHTML = "Unable to load gallery at this time.";
+      }
+    }
+
+    // Automatically load gallery on page load
+    window.onload = loadGallery;
   </script>
 </body>
 </html>
