--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
       justify-content: center;
       margin-top: 20px;
     }
-    .gallery img {
+    .gallery img,
+    .gallery video {
       width: 150px;
       margin: 10px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.3);
       transition: transform 0.2s;
+      object-fit: cover;
     }
-    .gallery img:hover {
+    .gallery img:hover,
+    .gallery video:hover {
       transform: scale(1.05);
     }
   </style>
@@ -44,7 +47,6 @@
     document.getElementById('uploadButton').addEventListener('click', async () => {
       const files = document.getElementById("fileInput").files;
       const statusText = document.getElementById("statusText");
-      const gallery = document.getElementById("gallery");
 
       if (!files.length) {
         statusText.textContent = "Please select at least one file!";
@@ -53,13 +55,12 @@
 
       statusText.textContent = "Uploading...";
 
-      const uploadResults = [];
-
       for (let file of files) {
         const formData = new FormData();
         formData.append("file", file);
         formData.append("upload_preset", uploadPreset);
         formData.append("folder", "wedding-uploads");
+        formData.append("tags", "wedding-gallery");
 
         try {
           const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/auto/upload`, {
@@ -68,7 +69,10 @@
           });
 
           const data = await response.json();
-          uploadResults.push(data.secure_url);
+
+          // Add media to gallery
+          addToGallery(data);
+
         } catch (err) {
           console.error("Upload failed for one file:", err);
           statusText.textContent = "❌ One or more uploads failed. Please try again.";
@@ -76,35 +80,46 @@
         }
       }
 
-      statusText.textContent = `✅ Upload complete! ${uploadResults.length} file(s) uploaded 🎉`;
-      loadGallery(); // Reload gallery to show new uploads
-
-
-      // Add uploaded images to gallery
-      uploadResults.forEach(url => {
-        const img = document.createElement("img");
-        img.src = url;
-        img.alt = "Uploaded memory";
-        gallery.appendChild(img);
-      });
+      statusText.textContent = `✅ Upload complete! 🎉`;
+      loadGallery(); // Optional: refresh from Cloudinary after upload
     });
 
-    // Load existing gallery images from Cloudinary
+    // Display media in the gallery
+    function addToGallery(resource) {
+      const gallery = document.getElementById("gallery");
+      const isImage = resource.resource_type === "image";
+      const mediaElement = isImage
+        ? document.createElement("img")
+        : document.createElement("video");
+
+      mediaElement.src = resource.secure_url;
+      mediaElement.alt = "Guest memory";
+      if (!isImage) mediaElement.controls = true;
+
+      gallery.appendChild(mediaElement);
+    }
+
+    // Load gallery from Cloudinary using tag
     async function loadGallery() {
       const gallery = document.getElementById("gallery");
       gallery.innerHTML = "Loading gallery...";
 
       try {
-        const response = await fetch("https://res.cloudinary.com/djt6ardqq/image/list/wedding-uploads.json");
+        const response = await fetch("https://res.cloudinary.com/djt6ardqq/image/list/wedding-gallery.json");
         const data = await response.json();
-
-        gallery.innerHTML = ""; // Clear loading text
+        gallery.innerHTML = "";
 
         data.resources.forEach(resource => {
-          const img = document.createElement("img");
-          img.src = `https://res.cloudinary.com/djt6ardqq/image/upload/w_300/${resource.public_id}.${resource.format}`;
-          img.alt = "Guest memory";
-          gallery.appendChild(img);
+          const isImage = resource.resource_type === "image" || resource.format.match(/jpg|png|jpeg|gif/i);
+          const media = isImage
+            ? document.createElement("img")
+            : document.createElement("video");
+
+          media.src = `https://res.cloudinary.com/${cloudName}/${resource.resource_type}/upload/w_300/${resource.public_id}.${resource.format}`;
+          media.alt = "Guest memory";
+          if (!isImage) media.controls = true;
+
+          gallery.appendChild(media);
         });
 
       } catch (err) {
@@ -113,7 +128,7 @@
       }
     }
 
-    // Automatically load gallery on page load
+    // Load gallery on page load
     window.onload = loadGallery;
   </script>
 </body>
