--- a/index.html
+++ b/index.html
@@ -96,23 +96,26 @@
 
       try {
         const response = await fetch("https://res.cloudinary.com/djt6ardqq/image/list/wedding-uploads.json");
-        
-        // Debug: Log the response to check what is returned
-        console.log("Cloudinary Response:", await response.json());
 
+        // Debugging: Log the response to see the raw data
         const data = await response.json();
+        console.log("Raw Cloudinary Response:", data);
 
         gallery.innerHTML = ""; // Clear loading text
 
-        // Loop through the resources and add images to the gallery
-        data.resources.forEach(resource => {
-          const img = document.createElement("img");
+        if (data.resources && data.resources.length > 0) {
+          // Loop through the resources and add images to the gallery
+          data.resources.forEach(resource => {
+            const img = document.createElement("img");
 
-          // Use the secure_url for images
-          img.src = resource.secure_url;
-          img.alt = "Guest memory";
-          gallery.appendChild(img);
-        });
+            // Use the secure_url for images
+            img.src = resource.secure_url;
+            img.alt = "Guest memory";
+            gallery.appendChild(img);
+          });
+        } else {
+          gallery.innerHTML = "No photos yet! Be the first!";
+        }
 
       } catch (err) {
         console.error("Gallery load error:", err);
